--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,14 @@ body {
   pointer-events: none;
 }
 
+#cover {
+  padding-right: 30px;
+}
+
 #container {
   height: 100% !important;
   flex-wrap: wrap;
+  padding-right: 20px;
 }
 
 .date {
