--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,17 @@ body {
   pointer-events: none;
 }
 
+hr {
+  border-top: 0px solid rgba(0,0,0,.1) !important;
+}
+
 #cover {
-  padding-right: 30px;
+  padding-right: 40px;
 }
 
 #container {
   height: 100% !important;
   flex-wrap: wrap;
-  padding-right: 20px;
 }
 
 .date {
@@ -92,7 +95,7 @@ h6 {
 }
 
 p {
-  margin-left: 15px;
+  margin-left: 10px;
   font-size: 20px;
 }
 
